--- a/home/price/standard.html
+++ b/home/price/standard.html
@@ -1,9 +1,14 @@
 <?php
-$_PAGE_STANDARD = true;
-$param['itemcode'] = array('085-cvt','085-cvt');
-$param['amount'] = array(30,30);
-$param['ink'] = array(1,3);
-require_once dirname(__FILE__).'/../php_libs/pageinfo.php';
+require_once $_SERVER['DOCUMENT_ROOT'].'/php_libs/conndb.php';
+$conn = new Conndb();
+$data = $conn->categoryList();
+$category_selector = '<select id="category_selector" onchange="$.changeCategory(this)">';
+foreach($data as $key=>$val){
+	$category_selector .= '<option value="'.$val['id'].'"';
+	if($key==0) $category_selector .= ' selected="selected"';
+	$category_selector .= '>'.mb_convert_encoding($val['name'],'euc-jp','utf-8').'</option>';
+}
+$category_selector .= '</select>';
 ?>
 <!DOCTYPE html>
 <html>
