--- a/home/index.html
+++ b/home/index.html
@@ -318,7 +318,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<div id="top_3bigbanner">
 				<p class="bb1"><a href="sameday/" onclick="ga('send','event','sameday','click','top');" style="margin-right: 10px;"></a></p>
 				<!--<p class="bb2"><a href="/contact/line/" onclick="ga('send','event','line-page','click','top');" style="margin-right: 10px;"></a></p>-->
-				<p class="bb2"><a href="/items/parkaguide.html" onclick="ga('send','event','parkaguide','click','top');" style="margin-right: 10px;"></a></p>
+				<p class="bb2"><a href="/design/emb.html" onclick="ga('send','event','parkaguide','click','top');" style="margin-right: 10px;"></a></p>
 				<!-- <p class="bb3"><a href="/contact/quickcontact/" onclick="ga('send','event','quickcontact','click','top');"></a></p>
 				<p class="bb4"><a href="http://www.print-t.jp/line" onclick="ga('send','event','line','click','top');"></a></p>-->
 				<p class="bb4"><a href="http://www.takahama428.com/design/designguide.html" onclick="ga('send','event','towel','click','top');"></a></p>
@@ -329,8 +329,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/sidenavi.php"; ?>
 
 		<div id="contacting">
-			<h2 id="Line001">【価格改定のお知らせ】（2017年05月23日更新）</h2>
-			<p>5月25日の注文確定分から、価格設定が変わります。<br>
+			<h2 id="Line001">【初回追加価格終了のお知らせ】（2017年05月26日更新）</h2>
+			<p>プリント価格改定に伴い、初回追加価格のご案内を終了させていただきます。<br>
+                ご利用いただきまして誠にありがとうございました。<br>
+                なお、新たな価格設定により、少数枚でも追加しやすい金額設定となっております。<br>
+                詳細はスタッフまでお問合せください。<br>
 				価格表がわかりやすくなり、少数枚の追加がお求めやすくなります。</p>
 		</div>    
 		
@@ -543,8 +546,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						</div>
 					</div>
 					<div class="zatotal">
-						<p class="totalarea">合計 ￥<input type="text" class="sum" id="sum" value="0" disabled="disabled" />~</p>
-						<p class="perarea"><span class="fontred">1枚当たり</span>　￥<input type="text" class="per fontred fs40" id="per" value="0" disabled="disabled" />~</p>
+						<p class="totalarea">合計 ￥<input type="text" class="sum" id="sum" value="0" disabled="disabled"></p>
+						<p class="perarea"><span class="fontred">1枚当たり</span>　￥<input type="text" class="per fontred fs40" id="per" value="0" disabled="disabled"></p>
 					</div>
 					<div class="low">
 						<p class="fontred fs20">＼1番安いのは！？／</p>
@@ -679,6 +682,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<div class="news_wrap">
 				<div class="news_list">
 					<dl class="list">
+                        <dt>2017.05.25</dt><dd><a href="/guide/information_001.html">【初回追加価格終了のお知らせ】</a></dd>
 						<dt>2017.04.24</dt><dd><a href="/guide/information_001.html">【GW休業のお知らせ】</a></dd>
 						<dt>2017.03.07</dt><dd><a href="/items/comfortcolors/">「Comfortcolors」入荷しました。</a></dd>
 						<dt>2017.03.07</dt><dd><a href="/items/anvil/">「Anvil」入荷しました。</a></dd>
@@ -812,10 +816,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 			</div>
 	</section>   -->
-					   <!--<div id="notification">
-		<p><a href="m3/guide/information.html"><span class="new">ニュース<br></span>
-		<span id="newinfo">【GW休業のお知らせ】</span><span class="newback">詳細<br></span></a></p>
-	</div> 　　 -->
+					   <div id="notification">
+                           <p><a href="m3/guide/information.html"><span class="new">ニュース<br></span>
+                               <span id="newinfo">【初回追加価格終了のお知らせ】<br>（2017年05月26日更新）<br></span><span class="newback">詳細<br></span></a></p>
+	</div> 　　 
 
 					<!--		<div class="btn1">
 		<ul>
