--- a/home/index.html
+++ b/home/index.html
@@ -328,14 +328,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		
 		<?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/sidenavi.php"; ?>
 
-		<!--<div id="contacting">
-			<h2 id="Line001">【初回追加価格終了のお知らせ】（2017年05月26日更新）</h2>
-			<p>プリント価格改定に伴い、初回追加価格のご案内を終了させていただきます。<br>
-                ご利用いただきまして誠にありがとうございました。<br>
-                なお、新たな価格設定により、少数枚でも追加しやすい金額設定となっております。<br>
-                詳細はスタッフまでお問合せください。<br>
-			価格表がわかりやすくなり、少数枚の追加がお求めやすくなります。</p>
-		</div>  -->
+		<div id="contacting">
+			<h2 id="Line001">【アイテム価格改定のお知らせ】</h2>
+			<p>6月15日(木)より下記のブランドのアイテムが価格改定となります。<br>
+                「GILDAN」<br>
+                改定前に御見積りいただいた場合でも、ご注文確定が6月15日(木)以降になりますと改定後の価格となりますのでご注意くださいませ。<br>
+                ※リピート注文の場合も改定後は改定価格でのご提供となりますのでご了承ください。</p>
+		</div>  
 		
 		<div class="contents">
 		
@@ -682,6 +681,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<div class="news_wrap">
 				<div class="news_list">
 					<dl class="list">
+						<dt>2017.06.9</dt><dd><a href="/guide/information_001.html">【アイテム価格改定のお知らせ】</a></dd>
                         <dt>2017.05.25</dt><dd><a href="/guide/information_001.html">【初回追加価格終了のお知らせ】</a></dd>
 						<dt>2017.04.24</dt><dd><a href="/guide/information_001.html">【GW休業のお知らせ】</a></dd>
 						<dt>2017.03.07</dt><dd><a href="/items/comfortcolors/">「Comfortcolors」入荷しました。</a></dd>
@@ -816,10 +816,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 			</div>
 	</section>   -->
-					<!--   <div id="notification">
+					   <div id="notification">
                            <p><a href="m3/guide/information.html"><span class="new">ニュース<br></span>
-                               <span id="newinfo">【初回追加価格終了のお知らせ】<br>（2017年05月26日更新）<br></span><span class="newback">詳細<br></span></a></p>
-						   </div> 　　 -->
+                               <span id="newinfo">【アイテム価格改定のお知らせ】</span><span class="newback">詳細<br></span></a></p>
+						   </div> 　　 
 
 					<!--		<div class="btn1">
 		<ul>
