--- a/home/m3/guide/information.html
+++ b/home/m3/guide/information.html
@@ -68,6 +68,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<section>
 			<h1 class="headLine01">お知らせ</h1>
 			
+			<p id="a01" class="headLine03">【アイテム価格改定のお知らせ】</p>
+            <ul class="textUl">
+                <li>
+                    <p>6月15日(木)より下記のブランドのアイテムが価格改定となります。<br>
+                        「GILDAN」<br>
+                        改定前に御見積りいただいた場合でも、ご注文確定が6月15日(木)以降になりますと改定後の価格となりますのでご注意くださいませ。<br>
+                        ※リピート注文の場合も改定後は改定価格でのご提供となりますのでご了承ください。</p>
+                </li>
+            </ul>
+			
 			<p id="a01" class="headLine03">【初回追加価格終了のお知らせ】<br>（2017年05月26日更新）</p>
             <ul class="textUl">
                 <li>
