--- a/home/design/emb.html
+++ b/home/design/emb.html
@@ -240,10 +240,10 @@ $category_selector .= '</select>';
                             </div>
 
                             <div class="offpc">
-                                <h4 class="red">詳しくお調べになりたい方はこちら！</h4>
-                                <p class="itembtn">
+                                <h4 class="red">※時期や枚数によって上記の納期より多く日数をいただく場合がございます。詳細はお問い合わせ下さい！</h4>
+								<!--<p class="itembtn">
                                     <a class="anchor_1" href="http://www.takahama428.com/delivery/">お届け日を確認する</a>
-                                </p>
+                                </p>-->
                             </div>
 
                             <div id="emb_date">
