--- a/home/design/printsize.html
+++ b/home/design/printsize.html
@@ -15,7 +15,7 @@
         <!-- m3 begin -->
         <link rel="stylesheet" href="/m3/common/css/import2.css">
         <link rel="stylesheet" type="text/css" href="/m3/common/css/common_responsive.css" media="all">
-        <link rel="stylesheet" type="text/css" href="/m3/common/css/slidebars_responsive.css" media="all">
+        <!--          <link rel="stylesheet" type="text/css" href="/m3/common/css/slidebars_responsive.css" media="all">   -->
         <link rel="stylesheet" href="/m3/design/css/lightbox.css">
         <link rel="stylesheet" href="/m3/common/css/import_responsive.css">
         <link rel="stylesheet" href="/m3/items/css/detail_responsive.css">
@@ -27,12 +27,12 @@
         <link rel="stylesheet" type="text/css" href="css/printsize.css" media="screen" />
 
         <script type="text/javascript" src="/common/js/jquery.js"></script>
-        <script type="text/javascript" src="/common/js/modalbox/jquery.modalbox-min.js"></script>
-    <!--    <script type="text/javascript" src="/common/js/lightbox/jquery.lightbox-0.5.js"></script>   -->
-        <script type="text/javascript" src="/m3/design/js/jquery-1.2.6.js"></script>
+        <!--    <script type="text/javascript" src="/common/js/modalbox/jquery.modalbox-min.js"></script>
+        <script type="text/javascript" src="/common/js/lightbox/jquery.lightbox-0.5.js"></script>
+        <script type="text/javascript" src="/m3/design/js/jquery-1.2.6.js"></script>   -->
         <script src="/m3/design/js/lightbox-plus-jquery.min.js"></script>
-        <script type="text/javascript" src="/common/js/tlalib.js"></script>
-        <script type="text/javascript" src="./js/printing.js"></script>
+        <!--    <script type="text/javascript" src="/common/js/tlalib.js"></script>
+        <script type="text/javascript" src="./js/printing.js"></script>  -->
 
 
         <!-- OGP -->
