--- a/home/m3/guide/information.html
+++ b/home/m3/guide/information.html
@@ -73,7 +73,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <li>
                     <p>6月22日(木)より下記のブランドのアイテムが価格改定となります。<br>
                         「GILDAN」<br>
-                        改定前に御見積りいただいた場合でも、ご注文確定が6月22s日(木)以降になりますと改定後の価格となりますのでご注意くださいませ。<br>
+                        改定前に御見積りいただいた場合でも、ご注文確定が6月22日(木)以降になりますと改定後の価格となりますのでご注意くださいませ。<br>
                         ※リピート注文の場合も改定後は改定価格でのご提供となりますのでご了承ください。</p>
                 </li>
             </ul>
