update OGP設定タグの修正 コメントアウト

--- a/home/guide/information_001.html
+++ b/home/guide/information_001.html
@@ -1,7 +1,7 @@
 <?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/pageinit.php"; ?>
 <!DOCTYPE html>
 <html>
-<head>
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#  website: http://ogp.me/ns/website#">
 	<meta charset="euc-jp" />
 	<title>お知らせ | タカハマライフアート</title>
 	<meta name="Description" content="" />
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="/common/css/base.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="/common/js/ui/flick/jquery.ui.accordion.css" />
 	<link rel="stylesheet" type="text/css" href="/common/js/ui/flick/jquery.ui.theme.css" />
-	<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />
+<!--	<link rel="stylesheet" type="text/css" href="../css/style.css" media="screen" />-->
 	<link rel="stylesheet" type="text/css" href="./css/information.css" media="screen" />
 
 	<script type="text/javascript" src="/common/js/jquery.js"></script>
@@ -32,7 +32,6 @@
 	</script>
 
 	<!-- OGP -->
-	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#  website: http://ogp.me/ns/website#">
 	<meta property="og:title" content="世界最速！？オリジナルTシャツを当日仕上げ！！" />
 	<meta property="og:type" content="article" /> 
 	<meta property="og:description" content="業界No. 1短納期でオリジナルTシャツを1枚から作成します。通常でも3日で仕上げます。" />
