--- a/home/index.html
+++ b/home/index.html
@@ -281,7 +281,7 @@ $delidate[$i]["weekname"] = $fin['weekname'];
                         </p>
 
                         <p class="bb4">
-                            <a href="http://www.takahama428.com//order/express/" onclick="ga('send','event','towel','click','top');"></a>
+                            <a href="http://www.takahama428.com/sameday/" onclick="ga('send','event','towel','click','top');"></a>
                         </p>
                     </div>
 
