--- a/home/m3/design/index.html
+++ b/home/m3/design/index.html
@@ -82,9 +82,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<li><a href="designguide.html"><img src="img/design_01.png" width="100%" alt="デザインの作り方"></a></li>
 				<li><a href="/m3/design/gallery.html"><img src="img/design_09.png" width="100%" alt="デザイン実例"></a></li>
 				<li><a href="printing.html"><img src="img/design_02.png" width="100%" alt="プリント方法の種類"></a></li>
-				<li><a href="/design/printsize.html"><img src="img/printsize.png" width="100%" alt="プリントサイズ"></a></li>
+                <li><a href="/design/printsize.html"><img src="img/printsize.png" width="100%" alt="プリントサイズ"></a></li>
+                <li><a href="/m3/design/designposition.html"><img src="img/design_10.png" width="100%" alt="プリント位置"></a></li>
+                <li><a href="inkcolor.html"><img src="img/design_05.png" width="100%" alt="シルクとカッティング一覧"></a></li>
 				<li><a href="send.html"><img src="img/design_04.png" width="100%" alt="4つの入稿方法"></a></li>
-				<li><a href="inkcolor.html"><img src="img/design_05.png" width="100%" alt="シルクとカッティング一覧"></a></li>
 				<li><a href="font.html"><img src="img/design_06.png" width="100%" alt="打ち替えフォント一覧"></a></li>
 				<li><a href="simulation.html"><img src="img/design_07.png" width="100%" alt="カラーを自由にチェンジ"></a></li>
 				<li><a href="/designtemplate/"><img src="img/design_08.png" width="100%" alt="デザイン選択文字変えるだけ"></a></li>
