--- a/home/index.html
+++ b/home/index.html
@@ -867,10 +867,10 @@ $delidate[$i]["weekname"] = $fin['weekname'];
 						</div>
 					</section>
 
-					<div id="notification">
+				<!--	<div id="notification">
 						<p><a href="m3/guide/information.html"><span class="new">ニュース<br></span>
                             <span id="newinfo">【アイテム価格改定のお知らせ】</span><span class="newback">詳細<br></span></a></p>
-					</div>
+					</div>    -->
 
 					<div>
 						<section class="customer">
