--- a/home/m3/design/index.html
+++ b/home/m3/design/index.html
@@ -13,12 +13,12 @@
 
 	<link rel="stylesheet" type="text/css" href="/m3/common/css/common.css" media="all">
 	<link rel="stylesheet" type="text/css" href="/m3/common/css/slidebars.css" media="all">
-	<link rel="stylesheet" href="/m3/common/css/import.css">
+	<link rel="stylesheet" href="/m3/common/css/dev-import_responsive.css">
 	<link rel="stylesheet" href="/m3/items/css/detail.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="../common/js/common1.js"></script>
+	<script src="/m3/common/js/common-responsive.js"></script>
 
 </head>
 
@@ -75,17 +75,16 @@
 
 	</script>
 
-	<!-- m3 begin -->
 	<header id="header" class="head2">
 		<?php include($_SERVER['DOCUMENT_ROOT']."/m3/common/inc/header.html"); ?>
 	</header>
-	<?php include($_SERVER['DOCUMENT_ROOT']."/m3/common/inc/gnavi.html"); ?>
-	<!-- m3 end -->
+	<div id="wrapper">
+		<?php include($_SERVER['DOCUMENT_ROOT']."/m3/common/inc/dev-gnavi.html"); ?>
+	</div>
 
 	<div id="container">
 		<header id="header">
 			<p class="desc">オリジナルTシャツ作成のデザインサポート！</p>
-			<!-- /header -->
 		</header>
 
 		<div id="main">
@@ -133,16 +132,13 @@
 				</ul>
 			</section>
 
-			<!-- /main -->
 		</div>
 		<?php include(dirname(__FILE__)."/../common/inc/footer.html"); ?>
-
 
 		<div class="sb-slidebar sb-right">
 			<?php include(dirname(__FILE__)."/../common/sidemenu.html"); ?>
 		</div>
 
-		<!-- /container -->
 	</div>
 </body>
 
