--- a/home/m3/common/inc/dev-gnavi.html
+++ b/home/m3/common/inc/dev-gnavi.html
@@ -42,7 +42,7 @@ if(strpos($_SERVER['SCRIPT_NAME'], DIRECTORY_SEPARATOR.'m3'.DIRECTORY_SEPARATOR.
 	<div id="gNaviMenu">
 		<div class="gNavi04Menu">
 			<ul class="linkList feelList" >
-				<li><a href="/order/"><span class="photo"><img src="/m3/common/img/gnavi/application.png"></span><span class="text">申し込み</span></a></li>
+				<li class="order_li"><a href="/order/"><span class="photo"><img src="/m3/common/img/gnavi/application.png"></span><span class="text">申し込み</span></a></li>
 				<li><a href="/m3/guide/flow.html"><span class="photo"><img src="/m3/common/img/gnavi/design_help.png"></span><span class="text">ご利用の流れ</span></a></li>
 			</ul>
 		</div>
