--- a/home/m3/common/inc/gnavi.html
+++ b/home/m3/common/inc/gnavi.html
@@ -49,6 +49,7 @@ font-size: 12px;
 			<ul class="linkList feelList" >
 				<li><a href="/order/"><span class="photo"><img src="/m3/common/img/gnavi/application.png"></span><span class="text">申し込み</span></a></li>
 				<li><a href="/m3/guide/flow.html"><span class="photo"><img src="/m3/common/img/gnavi/design_help.png"></span><span class="text">ご利用の流れ</span></a></li>
+                <li class="reo"><a href="/order/reorder.html"><span class="photo"><img src="/m3/common/img/gnavi/tsuika.png"></span><span class="text">追加・再注文の方法</span></a></li>
 			</ul>
 		</div>
 
