--- a/home/index.html
+++ b/home/index.html
@@ -257,10 +257,10 @@
 					<div class="fl">
 						<div>
 							<div class="main_images" style="">
-								<a href="#plan" onclick="ga('send','event','deliveryplan','click','main');" class="images_main"></a>
+                                <a href="/sameday/" onclick="ga('send','event','deliveryplan','click','main');" class="images_main"></a>
 							</div>
 							<div class="main_images" style="">
-								<a href="/items/gildan/" onclick="ga('send','event','gildan','click','main');" class="gildan_main"></a>
+                                <a href="/items/towel/" onclick="ga('send','event','gildan','click','main');" class="gildan_main"></a>
 							</div>
 							<div class="main_images" style="">
 								<a href="/campaign/towel/" onclick="ga('send','event','towel_campaign','click','main');" class="towel_main"></a>
