--- a/home/m3/common/inc/gnavi.html
+++ b/home/m3/common/inc/gnavi.html
@@ -2,14 +2,14 @@
 $isOrderPage = false;
 if(strpos($_SERVER['SCRIPT_NAME'], DIRECTORY_SEPARATOR.'m3'.DIRECTORY_SEPARATOR.'order'.DIRECTORY_SEPARATOR)===0){
 	$isOrderPage = true;
-}	
+}
 ?>
 <style>
 #gNaviPulldown .pull01 tr{
 font-size: 12px;
 }
 </style>
-		
+
 <div id="gNavi_my">
 	<div>
 		<div class="login_btn"><a href="/user/history.php" id="mypage"><p>マイページ</p></a></div>
@@ -32,14 +32,13 @@ font-size: 12px;
 	</div>
 </div>
 
-
 <nav>
 	<ul id="gNavi">
-		<li <?php echo 'id="gNavi01"';?>><p><img src="/m3/common/img/gnavi/btn_navi02.png" width="38" height="38" alt=""><span>料金</span></p></li>
-		<li <?php echo 'id="gNavi02"';?>><p><img src="/m3/common/img/gnavi/btn_navi03.png" width="38" height="38" alt=""><span>納期</span></p></li>
-		<li><p><a href="/m3/items/category.html"><img src="/m3/common/img/gnavi/btn_navi04.png" width="38" height="38" alt=""><span>アイテム</span></p></a></li>		
-		<li><p><a href="/m3/design/"><img src="/m3/common/img/gnavi/btn_navi01.png" width="38" height="38" alt=""><span>デザイン</span></p></a></li>
-		<li <?php echo 'id="gNavi04"';?>><p><img src="/m3/common/img/gnavi/btn_navi05.png" width="38" height="38" alt=""><span>申し込み</span></p></li>
+		<li id="gNavi01"><p><img src="/m3/common/img/gnavi/btn_navi02.png" width="38" height="38" alt=""><span>料金</span></p></li>
+		<li id="gNavi02"><p><img src="/m3/common/img/gnavi/btn_navi03.png" width="38" height="38" alt=""><span>納期</span></p></li>
+		<li><p><a href="/m3/items/category.html"><img src="/m3/common/img/gnavi/btn_navi04.png" width="38" height="38" alt=""><span>アイテム</span></a></p></li>
+		<li><p><a href="/m3/design/"><img src="/m3/common/img/gnavi/btn_navi01.png" width="38" height="38" alt=""><span>デザイン</span></a></p></li>
+		<li id="gNavi04"><p><img src="/m3/common/img/gnavi/btn_navi05.png" width="38" height="38" alt=""><span>申し込み</span></p></li>
 	</ul>
 
 
@@ -124,7 +123,4 @@ font-size: 12px;
 			</table>
 		</div>
 	</div>
-		
 </nav>
-
-
