--- a/home/design/index.html
+++ b/home/design/index.html
@@ -22,15 +22,21 @@
 	<link rel="stylesheet" href="/m3/items/css/detail_responsive.css">
 	<!-- m3 end -->
 
+
 	<script type="text/javascript" src="/design/js/jquery-1.2.6.js"></script>
 	<script type="text/javascript" src="/common/js/jquery.js"></script>
+
+	<!-- OGP -->
+
+
+
 </head>
 
 <body>
 	<!-- Google Tag Manager -->
 	<noscript>
-		<iframe src="//www.googletagmanager.com/ns.html?id=GTM-T5NQFM" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-	</noscript>
+            <iframe src="//www.googletagmanager.com/ns.html?id=GTM-T5NQFM" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+        </noscript>
 	<script>
 		(function(w, d, s, l, i) {
 			w[l] = w[l] || [];
@@ -63,6 +69,7 @@
 
 		<?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/globalmenu.php"; ?>
 
+
 		<div class="contents">
 			<ul class="pan">
 				<li><a href="/">オリジナルＴシャツ屋ＴＯＰ</a></li>
@@ -78,38 +85,42 @@
 			<section>
 				<ul class="designUl">
 					<li>
-						<a href="designguide.html"><img src="/m3/design/img/design_01.png" width="100%" alt="デザインの作り方"></a>
+						<a href="/m3/design/designguide.html"><img src="/m3/design/img/design_01.png" width="100%" alt="デザインの作り方"></a>
 					</li>
 					<li>
 						<a href="/m3/design/gallery.html"><img src="/m3/design/img/design_09.png" width="100%" alt="デザイン実例"></a>
 					</li>
 					<li>
-						<a href="printing.html"><img src="/m3/design/img/design_02.png" width="100%" alt="プリント方法の種類"></a>
+						<a href="/m3/design/printing.html"><img src="/m3/design/img/design_02.png" width="100%" alt="プリント方法の種類"></a>
 					</li>
 					<li>
 						<a href="/m3/design/designposition.html"><img src="/m3/design/img/design_10.png" width="100%" alt="プリント位置とサイズ紹介"></a>
 					</li>
 					<li>
-						<a href="send.html"><img src="/m3/design/img/design_04.png" width="100%" alt="4つの入稿方法"></a>
+						<a href="/m3/design/send.html"><img src="/m3/design/img/design_04.png" width="100%" alt="4つの入稿方法"></a>
 					</li>
 					<li>
-						<a href="inkcolor.html"><img src="/m3/design/img/design_05.png" width="100%" alt="シルクとカッティング一覧"></a>
+						<a href="/m3/design/inkcolor.html"><img src="/m3/design/img/design_05.png" width="100%" alt="シルクとカッティング一覧"></a>
 					</li>
 					<li>
-						<a href="font.html"><img src="/m3/design/img/design_06.png" width="100%" alt="打ち替えフォント一覧"></a>
+						<a href="/m3/design/font.html"><img src="/m3/design/img/design_06.png" width="100%" alt="打ち替えフォント一覧"></a>
 					</li>
 					<li>
-						<a href="simulation.html"><img src="/m3/design/img/design_07.png" width="100%" alt="カラーを自由にチェンジ"></a>
+						<a href="/m3/design/simulation.html"><img src="/m3/design/img/design_07.png" width="100%" alt="カラーを自由にチェンジ"></a>
 					</li>
 					<li>
 						<a href="/designtemplate/"><img src="/m3/design/img/design_08.png" width="100%" alt="デザイン選択文字変えるだけ"></a>
 					</li>
 					<li>
-						<a href="support.html"><img src="/m3/design/img/design_03.png" width="100%" alt="デザインでお困りの方"></a>
+						<a href="/m3/design/support.html"><img src="/m3/design/img/design_03.png" width="100%" alt="デザインでお困りの方"></a>
 					</li>
 				</ul>
 			</section>
+
+			<!--contents-->
+
 		</div>
+		<!--container-->
 	</div>
 	<p class="scroll_top"><a href="#header">デザインサービス一覧　ページトップへ</a></p>
 
@@ -164,6 +175,7 @@
 
 	</script>
 
+
 	<!--Yahoo!タグマネージャー導入 2014.04 -->
 	<script type="text/javascript">
 		(function() {
@@ -176,8 +188,10 @@
 
 	</script>
 	<noscript>
-		<iframe src="//b.yjtag.jp/iframe?c=bTZi1c8" width="1" height="1" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-	</noscript>
+                        <iframe src="//b.yjtag.jp/iframe?c=bTZi1c8" width="1" height="1" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                    </noscript>
+
+
 
 </body>
 
