--- a/home/price/fee/index.html
+++ b/home/price/fee/index.html
@@ -431,7 +431,9 @@
 
 							<div>
 								<p class="comment2">さらにプリントの詳細を知りたい方はこちら</p>
-								<a class="button2" href="/design/printing.html#silk">シルクスクリーンプリント方法を見る
+								<a class="button2 pc" href="/design/printing.html#silk">シルクスクリーンプリント方法を見る
+								</a>
+								<a class="button2 sp" href="/m3/design/printing.html#silk">シルクスクリーンプリント方法を見る
 								</a>
 							</div>
 						</div>
@@ -672,9 +674,12 @@
 
 						<div>
 							<p class="comment2">さらにプリントの詳細を知りたい方はこちら</p>
-							<a class="button2" href="/design/printing.html#digit">
+							<a class="button2 pc" href="/design/printing.html#digit">
                             デジタル転写プリント方法を見る
                         </a>
+							<a class="button2 sp" href="/m3/design/printing.html#digit">
+								デジタル転写プリント方法を見る
+							</a>
 						</div>
 					</div>
 				</div>
@@ -1082,7 +1087,8 @@
 
 						<div>
 							<p class="comment2">さらにプリントの詳細を知りたい方はこちら</p>
-							<a class="button2" href="/design/printing.html#inkjet">インクジェットプリント方法を見る</a>
+							<a class="button2 pc" href="/design/printing.html#inkjet">インクジェットプリント方法を見る</a>
+							<a class="button2 sp" href="/m3/design/printing.html#inkjet">インクジェットプリント方法を見る</a>
 						</div>
 					</div>
 				</div>
@@ -1277,9 +1283,8 @@
 
 						<div>
 							<p class="comment2">さらにプリントの詳細を知りたい方はこちら</p>
-							<a class="button2" href="/design/printing.html#cutting">
-                                カッティングプリント方法を見る
-                            </a>
+							<a class="button2 pc" href="/design/printing.html#cutting">カッティングプリント方法を見る</a>
+							<a class="button2 sp" href="/m3/design/printing.html#cutting">カッティングプリント方法を見る</a>
 						</div>
 					</div>
 				</div>
@@ -1534,9 +1539,7 @@
 
 						<div>
 							<p class="comment2">さらに刺繍の詳細を知りたい方はこちら</p>
-							<a class="button2" href="/design/emb.html">
-                               刺繍ページを見る
-                            </a>
+							<a class="button2" href="/design/emb.html">刺繍ページを見る</a>
 						</div>
 					</div>
 				</div>
