--- a/home/order/reorder.html
+++ b/home/order/reorder.html
@@ -25,8 +25,9 @@ $category_selector .= '>'.$categoryName.'</option>';
 }
 $category_selector .= '</select>';
 ?>
-<!DOCTYPE html>
-<html>
+	<!DOCTYPE html>
+	<html>
+
 	<head>
 		<meta charset="euc-jp" />
 		<title>追加・再注文について ｜ オリジナルTシャツが早い！タカハマライフアート</title>
@@ -37,15 +38,22 @@ $category_selector .= '</select>';
 
 		<link rel="stylesheet" type="text/css" href="/common/js/modalbox/css/jquery.modalbox.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/order/express/css/express.css" media="screen" />
+
+
+		<link rel="shortcut icon" href="/icon/favicon.ico" />
 		<link rel="stylesheet" href="/m3/common/css/import2.css">
 		<link rel="stylesheet" type="text/css" href="/m3/common/css/common_responsive.css" media="all">
 		<link rel="stylesheet" type="text/css" href="/m3/common/css/slidebars_responsive.css" media="all">
 		<link rel="stylesheet" href="/m3/common/css/import_responsive.css">
 		<link rel="stylesheet" href="/m3/items/css/detail_responsive.css">
+		<!-- m3 end -->
+
 		<link rel="stylesheet" type="text/css" href="/common/css/dev-common_responsive.css" media="all" />
 		<link rel="stylesheet" type="text/css" href="/common/css/base_responsive.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/contact/css/custom_responsive.css" media="screen" />
 		<link rel="stylesheet" type="text/css" href="/order/css/reorder.css" media="screen" />
+		<!-- m3 begin -->
+		<!-- m3 begin -->
 
 		<script type="text/javascript" src="/common/js/jquery.js"></script>
 		<script type="text/javascript" src="/common/js/ui/jquery.ui.core.js"></script>
@@ -54,6 +62,9 @@ $category_selector .= '</select>';
 		<script type="text/javascript" src="/common/js/modalbox/jquery.modalbox-min.js"></script>
 		<script type="text/javascript" src="/common/js/tlalib.js"></script>
 		<script src="/m3/common/js/common1.js"></script>
+
+
+
 	</head>
 
 	<body>
@@ -320,8 +331,8 @@ $category_selector .= '</select>';
 
 		</script>
 		<noscript>
-			<iframe src="//b.yjtag.jp/iframe?c=bTZi1c8" width="1" height="1" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-		</noscript>
+                        <iframe src="//b.yjtag.jp/iframe?c=bTZi1c8" width="1" height="1" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                    </noscript>
 
 
 		<!-- m3 begin -->
@@ -332,10 +343,11 @@ $category_selector .= '</select>';
 				<div class="sb-slidebar sb-right">
 					<?php include($_SERVER['DOCUMENT_ROOT']."/m3/common/sidemenu.html"); ?>
 				</div>
+				<!-- /container -->
 			</div>
 		</div>
 		<!-- m3 end -->
 
 	</body>
 
-</html>
+	</html>
