--- a/home/index.html
+++ b/home/index.html
@@ -189,8 +189,8 @@
 	}
 
 ?>
-<!DOCTYPE html>
-<html lang="ja">
+	<!DOCTYPE html>
+	<html lang="ja">
 
 	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#  website: http://ogp.me/ns/website#">
 		<meta charset="euc-jp">
@@ -751,10 +751,10 @@
 						</div>
 					</section>
 
-					<!--	<div id="notification">
+					<div id="notification">
 						<p><a href="m3/guide/information.html"><span class="new">ニュース<br></span>
-						   <span id="newinfo">【初回追加価格終了のお知らせ】<br>（2017年05月26日更新）<br></span><span class="newback">詳細<br></span></a></p>
-					</div> -->
+						   <span id="newinfo">【夏季休業のお知らせ】</span><span class="newback">詳細<br></span></a></p>
+					</div>
 
 					<div>
 						<section class="customer">
@@ -883,4 +883,4 @@
 		</div>
 	</body>
 
-</html>
+	</html>
