--- a/home/index.html
+++ b/home/index.html
@@ -751,10 +751,10 @@
 						</div>
 					</section>
 
-					<div id="notification">
+					<!--<div id="notification">
 						<p><a href="m3/guide/information.html"><span class="new">ニュース<br></span>
 						   <span id="newinfo">【夏季休業のお知らせ】</span><span class="newback">詳細<br></span></a></p>
-					</div>
+					</div>-->
 
 					<div>
 						<section class="customer">
