--- a/home/design/index.html
+++ b/home/design/index.html
@@ -13,13 +13,23 @@
 	<link rel="stylesheet" type="text/css" href="/common/css/base_responsive.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="/contact/css/custom_responsive.css" media="screen" />
 	<link href="/design/css/ui.tabs.css" rel="stylesheet" type="text/css" />
+
+	<!-- m3 begin -->
 	<link rel="stylesheet" href="/m3/common/css/import2.css">
 	<link rel="stylesheet" type="text/css" href="/m3/common/css/common_responsive.css" media="all">
 	<link rel="stylesheet" type="text/css" href="/m3/common/css/slidebars_responsive.css" media="all">
 	<link rel="stylesheet" href="/m3/common/css/import_responsive.css">
 	<link rel="stylesheet" href="/m3/items/css/detail_responsive.css">
+	<!-- m3 end -->
+
+
 	<script type="text/javascript" src="/design/js/jquery-1.2.6.js"></script>
 	<script type="text/javascript" src="/common/js/jquery.js"></script>
+
+	<!-- OGP -->
+
+
+
 </head>
 
 <body>
@@ -84,6 +94,9 @@
 						<a href="/m3/design/printing.html"><img src="/m3/design/img/design_02.png" width="100%" alt="プリント方法の種類"></a>
 					</li>
 					<li>
+						<a href="/design/printsize.html"><img src="/m3/design/img/printsize.png" width="100%" alt="プリントサイズ"></a>
+					</li>
+					<li>
 						<a href="/m3/design/designposition.html"><img src="/m3/design/img/design_10.png" width="100%" alt="プリント位置とサイズ紹介"></a>
 					</li>
 					<li>
@@ -104,6 +117,9 @@
 					<li>
 						<a href="/m3/design/support.html"><img src="/m3/design/img/design_03.png" width="100%" alt="デザインでお困りの方"></a>
 					</li>
+					<li>
+						<a href="/design/emb.html"><img src="/m3/design/img/shisyu.png" width="100%" alt="刺繍"></a>
+					</li>
 				</ul>
 			</section>
 
@@ -113,6 +129,8 @@
 		<!--container-->
 	</div>
 	<p class="scroll_top"><a href="#header">デザインサービス一覧　ページトップへ</a></p>
+
+
 
 	<?php include $_SERVER['DOCUMENT_ROOT']."/common/inc/footer.php"; ?>
 
@@ -176,8 +194,10 @@
 
 	</script>
 	<noscript>
-		<iframe src="//b.yjtag.jp/iframe?c=bTZi1c8" width="1" height="1" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-	</noscript>
+                        <iframe src="//b.yjtag.jp/iframe?c=bTZi1c8" width="1" height="1" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                    </noscript>
+
+
 
 </body>
 
