--- a/home/index.html
+++ b/home/index.html
@@ -752,11 +752,11 @@
 					</section>
 
 					<?php
-					$target = strtotime("2017/08/16");
+					$target = strtotime("2017/09/04");
 					if(time() < $target){
 						echo '<div id="notification">
 							<p><a href="m3/guide/information.html"><span class="new">ニュース<br></span>
-							<span id="newinfo">【夏季休業のお知らせ】</span><span class="newback">詳細<br></span></a></p>
+							<span id="newinfo">【アイテム価格改定のお知らせ】</span><span class="newback">詳細<br></span></a></p>
 							</div>';
 					}
 					?>
