価格改定お知らせ

--- a/home/m3/guide/information.html
+++ b/home/m3/guide/information.html
@@ -84,6 +84,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<section>
 				<h1 class="headLine01">お知らせ</h1>
 
+			
+				<p id="a01" class="headLine03">【アイテム価格改定のお知らせ】</p>
+				<ul class="textUl">
+					<li>
+						<p>10月4日(水)より下記のブランドのアイテムが価格改定となります。<br>
+							「TRUSS」<br>
+							改定前に御見積りいただいた場合でも、ご注文確定が10月4日(水)以降になりますと改定後の価格となりますのでご注意くださいませ。<br>
+							※リピート注文の場合も改定後は改定価格でのご提供となりますのでご了承ください。
+						</p>
+					</li>
+				</ul>
+				
 				<p id="a01" class="headLine03">【アイテム価格改定のお知らせ】</p>
 				<ul class="textUl">
 					<li>
